fix(project 2): merge conflict content